Mise à jour liste des paris
TODO :
- trier par la date du pari
- mettre à jour la liste après un nouveau pari

--- a/views/listMatchs.ejs
+++ b/views/listMatchs.ejs
@@ -36,8 +36,8 @@
 						<td>{{ match.equipe1 }}</td>
 						<td>{{ match.equipe2 }}</td>
 						<td>
-							<select name="mises" ng-repeat="mises in match.misesUtilisateur">
-									<option>{{mises.equipe }} - {{ mises.valeurMise }}</option>
+							<select name="mises" ng-model="parisAffiche" ng-options="(mises.equipe + ' - ' + mises.valeurMise + ' / ' + mises.date) for mises in match.misesUtilisateur track by date">
+									<!--option>{{mises.equipe }} - {{ mises.valeurMise }}</option-->
 							</select>
 						</td>
 						<td>
