--- a/views/components/left_nav.ejs
+++ b/views/components/left_nav.ejs
@@ -1,6 +1,6 @@
 
 	        <div class="col-sm-3 col-md-2 sidebar">
-	        <h4>Cagnotte : <span id="cagnotte"><%= user.local.cagnotte - sommeMisesUtilisateur %></span></h4>
+	        <h4>Cagnotte : <span id="cagnotte">{{ cagnotte - sommeMisesUtilisateur }}</span></h4>
 	          <ul class="nav nav-sidebar">
 	            <li class="active"><a href="/listMatchs">Liste des matchs <span class="sr-only">(current)</span></a></li>
 	            <li><a href="/listMatchsAdmin">Scores des matchs</a></li>
