--- a/views/listMatchs.ejs
+++ b/views/listMatchs.ejs
@@ -25,6 +25,7 @@
 	                  <th>#</th>
 	                  <th>Date</th>
 	                  <th>Match</th>
+	                  <th>Cotes</th>
 	                  <th>Paris effectués</th>
 	                  <th colspan="2">Misons</th>
 	                  <th></th>
@@ -39,6 +40,9 @@
 						<td>
 							{{ match.equipe1 }} - 
 							{{ match.equipe2 }}
+						</td>
+						<td>
+							<span ng-bind="calculeCote( $index, 'equipe1' ) | number:2"></span> / <span ng-bind="calculeCote( $index, 'nul' ) | number:2"></span> / <span ng-bind="calculeCote( $index, 'equipe2' ) | number:2"></span>
 						</td>
 						<td>
 							<select name="mises" ng-model="pariAffiche" ng-options="(mises.equipe + ' - ' + mises.valeurMise + ' - ' + (mises.date | date:'dd/MM/yyyy')) group by mises.equipe for mises in match.misesUtilisateur track by date">
