--- a/views/listMatchs.ejs
+++ b/views/listMatchs.ejs
@@ -45,8 +45,13 @@
 							<span ng-bind="calculeCote( $index, 'equipe1' ) | number:2"></span> / <span ng-bind="calculeCote( $index, 'nul' ) | number:2"></span> / <span ng-bind="calculeCote( $index, 'equipe2' ) | number:2"></span>
 						</td>
 						<td>
-							<select name="mises" ng-model="pariAffiche" ng-options="(mises.equipe + ' - ' + mises.valeurMise + ' - ' + (mises.date | date:'dd/MM/yyyy')) group by mises.equipe for mises in match.misesUtilisateur track by date">
-							</select>
+							<div ng-if="match.misesUtilisateur.length">
+								<select name="mises" ng-model="pariAffiche" ng-options="(mises.equipe + ' - ' + mises.valeurMise + ' - ' + (mises.date | date:'dd/MM/yyyy')) group by mises.equipe for mises in match.misesUtilisateur track by date">
+								</select>
+							</div>
+							<div ng-if="!match.misesUtilisateur.length">
+								<i>Aucun pari</i>
+							</div>
 						</td>
 						<td>
 							<div ng-show="match.afficherInput" class="ng-hide">
@@ -56,6 +61,9 @@
 									<option value="Nul">Nul</option>
 									<option value="{{ match.equipe2 }}">{{ match.equipe2 }}</option>
 								</select>
+							</div>
+							<div ng-show="!match.afficherInput" class="ng-hide">
+								Gain : {{ match.gain }}
 							</div>
 						</td>
 						<td>
